--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -522,7 +522,8 @@ section {
   text-transform: uppercase;
   margin-bottom: 20px;
   padding-bottom: 20px;
-  position: relative;
+  position:relative;
+  text-align: left;
   color: #37517e;
 }
 
